--- a/demo.html
+++ b/demo.html
@@ -3,15 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>High Quality PDF Compressor</title>
-<meta name=news_keywords content="PDF Compressor,image to 10kb,image to 20kb,image to 30kb,image to 40kb,image to 50kb,image to 100kb,image under 200kb" itemprop="keywords"/>
-<meta name=description content="Hight Quality PDF file compressor without losing pixel quality and easy download" itemprop="description"/>
-<link rel=canonical href=https://www.newsguru.live/tools/pdf-compressor />
-<link rel=stylesheet href=assets/css/style.css>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6958761602872755" crossorigin=anonymous></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-V6HH2RKGTW"></script>
-<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
-gtag('js',new Date());gtag('config','G-V6HH2RKGTW');</script>
+    <title>PDF Compressor Tool</title>
     <style>
         body {
             display: flex;
