--- a/demo.html
+++ b/demo.html
@@ -3,231 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Details - MSRTC Multiple Posts 2024</title>
-    <style>
-        /* Global Styles */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 20px;
-            line-height: 1.6;
-            color: #333;
+    <title>High Quality Image Compressor</title>
+    <meta name="news_keywords" content="image compressor,image to 10kb,image to 20kb,image to 30kb,image to 40kb,image to 50kb,image to 100kb,image under 200kb" itemprop="keywords"/>
+    <meta name="description" content="High Quality image compressor without losing pixel quality and easy download" itemprop="description"/>
+    <link rel="canonical" href="https://www.newsguru.live/tools/image-compressor" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.svg">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6958761602872755" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6HH2RKGTW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
         }
-
-        a {
-            color: #009879;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        /* Header */
-        .header {
-            background-color: #009879;
-            color: #fff;
-            padding: 15px 20px;
-            text-align: center;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        .header .logo h1 {
-            margin: 0;
-        }
-
-        /* Breadcrumb Navigation */
-        .breadcrumb {
-            padding: 10px 20px;
-            background-color: #e0e0e0;
-            margin-bottom: 20px;
-            border-radius: 8px;
-        }
-
-        .breadcrumb a {
-            color: #009879;
-            font-weight: bold;
-        }
-
-        .breadcrumb span {
-            color: #666;
-        }
-
-        /* Main Content */
-        main {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            background: white;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-
-        h2, h3 {
-            color: #333;
-        }
-
-        .job-summary, .job-details, .application-info, .important-links {
-            margin-bottom: 20px;
-        }
-
-        .job-summary h2 {
-            margin-top: 0;
-            font-size: 1.8em;
-            border-bottom: 2px solid #009879;
-            padding-bottom: 10px;
-        }
-
-        .job-summary p {
-            margin: 5px 0;
-        }
-
-        /* Styled Table */
-        .styled-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 25px 0;
-            font-size: 1em;
-            font-family: 'Roboto', sans-serif;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        .styled-table thead tr {
-            background-color: #009879;
-            color: #ffffff;
-            text-align: left;
-        }
-
-        .styled-table th,
-        .styled-table td {
-            padding: 12px 15px;
-        }
-
-        .styled-table tbody tr {
-            border-bottom: 1px solid #dddddd;
-        }
-
-        .styled-table tbody tr:nth-of-type(even) {
-            background-color: #f3f3f3;
-        }
-
-        .styled-table tbody tr:last-of-type {
-            border-bottom: 2px solid #009879;
-        }
-
-        .styled-table tbody tr:hover {
-            background-color: #f1f1f1;
-        }
-
-        /* Application and Important Links */
-        .application-info, .important-links {
-            padding: 20px;
-            background: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-        }
-
-        .application-info h3, .important-links h3 {
-            border-bottom: 2px solid #009879;
-            padding-bottom: 10px;
-        }
-
-        .application-info ul, .important-links ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .application-info li, .important-links li {
-            margin: 10px 0;
-        }
-
-        /* Footer */
-        .footer {
-            text-align: center;
-            padding: 20px 0;
-            background-color: #009879;
-            color: #fff;
-            margin-top: 20px;
-            border-radius: 8px;
-            position: fixed;
-            bottom: 0;
-            width: calc(100% - 40px); /* 100% minus body padding */
-            left: 20px; /* body padding */
-        }
-    </style>
+        gtag('js', new Date());
+        gtag('config', 'G-V6HH2RKGTW');
+    </script>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <h1>Job Alert</h1>
+    <div class="sidebar">
+        <h2>Toolbox</h2>
+        <a href="image-compressor" class="active">Image Compressor</a>
+        <a href="pdf-compressor">PDF Compressor</a>
+        <a href="EMI-Calculator">EMI-Calculator</a>
+        <a href="photoshop-online">Image Editor</a>
+    </div>
+    <div class="main-content">
+        <h1>High Quality Image Compressor</h1>
+        <ins class="adsbygoogle" style="display:block;text-align:center" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-6958761602872755" data-ad-slot="5307231561"></ins>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        <div class="upload-area">
+            <div class="upload-btn-wrapper">
+                <button class="btn">Upload Images</button>
+                <input type="file" id="imageInput" accept="image/*" multiple>
+            </div>
         </div>
-    </header>
-    <nav class="breadcrumb">
-        <a href="index.html">Home</a> &gt;
-        <a href="#">Latest Jobs</a> &gt;
-        <span>MSRTC Multiple Posts 2024</span>
-    </nav>
-    <main>
-        <section class="job-summary">
-            <h2>MSRTC Multiple Posts 2024</h2>
-            <p>Posted on: 05-Jul-2024</p>
-            <p>Organization: Maharashtra State Road Transport Corporation (MSRTC)</p>
-        </section>
-        <section class="job-details">
-            <h3>Job Details</h3>
-            <table class="styled-table">
-                <thead>
-                    <tr>
-                        <th>Post Name</th>
-                        <th>No. of Vacancies</th>
-                        <th>Qualification</th>
-                        <th>Age Limit</th>
-                        <th>Pay Scale</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Driver</td>
-                        <td>100</td>
-                        <td>10th Pass</td>
-                        <td>21-35 years</td>
-                        <td>Rs. 20,000 - 25,000</td>
-                    </tr>
-                    <tr>
-                        <td>Conductor</td>
-                        <td>150</td>
-                        <td>10th Pass</td>
-                        <td>18-33 years</td>
-                        <td>Rs. 18,000 - 22,000</td>
-                    </tr>
-                    <!-- Add more rows as needed -->
-                </tbody>
-            </table>
-        </section>
-        <section class="application-info">
-            <h3>Application Details</h3>
-            <ul>
-                <li><strong>Application Start Date:</strong> 10-Jul-2024</li>
-                <li><strong>Application End Date:</strong> 25-Jul-2024</li>
-                <li><strong>Application Fee:</strong> Rs. 500 for General/OBC, Rs. 250 for SC/ST</li>
-                <li><strong>How to Apply:</strong> Interested candidates can apply online through the official website.</li>
-            </ul>
-        </section>
-        <section class="important-links">
-            <h3>Important Links</h3>
-            <ul>
-                <li><a href="#">Official Notification</a></li>
-                <li><a href="#">Apply Online</a></li>
-                <li><a href="#">Official Website</a></li>
-            </ul>
-        </section>
-    </main>
-    <footer class="footer">
-        <p>&copy; 2024 Job Alert. All rights reserved.</p>
-    </footer>
+        <div id="imagesContainer"></div>
+        <div class="loader" id="loader"></div>
+        <div class="progress-container" id="progressContainer">
+            <div class="progress-bar" id="progressBar"></div>
+        </div>
+        <div class="rating-section">
+            <h2>Rate Your Experience</h2>
+            <div class="rating-buttons">
+                <button data-rating="1">1</button>
+                <button data-rating="2">2</button>
+                <button data-rating="3">3</button>
+                <button data-rating="4">4</button>
+                <button data-rating="5">5</button>
+            </div>
+            <div class="thank-you-message" id="thankYouMessage">Thank you for your feedback!</div>
+        </div>
+    </div>
+    <script>
+        document.getElementById('imageInput').addEventListener('change', function(event) {
+            const files = event.target.files;
+            if (files.length > 0) {
+                const loader = document.getElementById('loader');
+                const progressContainer = document.getElementById('progressContainer');
+                const progressBar = document.getElementById('progressBar');
+                const imagesContainer = document.getElementById('imagesContainer');
+                imagesContainer.innerHTML = ''; // Clear previous images
+                loader.style.display = 'block';
+                progressContainer.style.display = 'block';
+                progressBar.style.width = '0%';
+                const quality = 0.5;
+                let processedCount = 0;
+
+                Array.from(files).forEach((file, index) => {
+                    const reader = new FileReader();
+                    reader.onload = function(e) {
+                        const img = new Image();
+                        img.onload = function() {
+                            const canvas = document.createElement('canvas');
+                            canvas.width = img.width;
+                            canvas.height = img.height;
+                            const ctx = canvas.getContext('2d');
+                            ctx.drawImage(img, 0, 0);
+                            canvas.toBlob(function(blob) {
+                                const compressedUrl = URL.createObjectURL(blob);
+                                const compressedImage = new Image();
+                                compressedImage.onload = function() {
+                                    const imageWrapper = document.createElement('div');
+                                    imageWrapper.classList.add('image-wrapper');
+                                    const originalResolution = document.createElement('div');
+                                    originalResolution.classList.add('info');
+                                    originalResolution.textContent = `Original Resolution: ${img.width}x${img.height}`;
+                                    const originalSize = document.createElement('div');
+                                    originalSize.classList.add('info');
+                                    originalSize.textContent = `Original Size: ${(file.size / 1024).toFixed(2)}KB`;
+                                    const compressedResolution = document.createElement('div');
+                                    compressedResolution.classList.add('info');
+                                    compressedResolution.textContent = `Compressed Resolution: ${compressedImage.width}x${compressedImage.height}`;
+                                    const compressedSize = document.createElement('div');
+                                    compressedSize.classList.add('info');
+                                    compressedSize.textContent = `Compressed Size: ${(blob.size / 1024).toFixed(2)}KB`;
+                                    const downloadLink = document.createElement('a');
+                                    downloadLink.href = compressedUrl;
+                                    downloadLink.download = `compressed_image_${index}.jpg`;
+                                    downloadLink.textContent = 'Download Compressed Image';
+                                    downloadLink.classList.add('download-link');
+
+                                    imageWrapper.appendChild(originalResolution);
+                                    imageWrapper.appendChild(originalSize);
+                                    imageWrapper.appendChild(compressedResolution);
+                                    imageWrapper.appendChild(compressedSize);
+                                    imageWrapper.appendChild(downloadLink);
+                                    imagesContainer.appendChild(imageWrapper);
+                                    processedCount++;
+                                    progressBar.style.width = `${(processedCount / files.length) * 100}%`;
+                                    if (processedCount === files.length) {
+                                        loader.style.display = 'none';
+                                    }
+                                };
+                                compressedImage.src = compressedUrl;
+                            }, 'image/jpeg', quality);
+                        };
+                        img.src = e.target.result;
+                    };
+                    reader.readAsDataURL(file);
+                });
+            }
+        });
+
+        const ratingButtons = document.querySelectorAll('.rating-buttons button');
+        const thankYouMessage = document.getElementById('thankYouMessage');
+        ratingButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                ratingButtons.forEach(btn => btn.classList.remove('selected'));
+                button.classList.add('selected');
+                thankYouMessage.style.display = 'block';
+            });
+        });
+    </script>
 </body>
 </html>
